RESOLVED FIXED55067
FEConvolveMatrixElement changes doesn't require relayout.
https://bugs.webkit.org/show_bug.cgi?id=55067
Summary FEConvolveMatrixElement changes doesn't require relayout.
Renata Hodovan
Reported 2011-02-23 11:48:20 PST
FEConvolveMatrixElement changes doesn't require relayout.
Attachments
Proposed patch (7.43 KB, patch)
2011-02-23 12:01 PST, Renata Hodovan
no flags
Renata Hodovan
Comment 1 2011-02-23 12:01:17 PST
Created attachment 83518 [details] Proposed patch
Renata Hodovan
Comment 2 2011-02-23 12:45:28 PST
Comment on attachment 83518 [details] Proposed patch Clearing flags on attachment: 83518 Committed r79474: <http://trac.webkit.org/changeset/79474>
Renata Hodovan
Comment 3 2011-02-23 12:45:36 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 5 2011-02-24 02:03:42 PST
Test failures are tracked by https://bugs.webkit.org/show_bug.cgi?id=55122 now.
Renata Hodovan
Comment 6 2011-02-24 02:23:41 PST
Note You need to log in before you can comment on or make changes to this bug.