2011-02-23  Renata Hodovan  <reni@webkit.org>

Reviewed by Darin Adler.

        FEConvolveMatrixElement changes doesn't require relayout
        https://bugs.webkit.org/show_bug.cgi?id=55067

        When the FEConvolveMatrixElement receives an update message but the
        given value remains the same we don't need to relayout the filter.

        No new tests are needed because this modificiation is covered by the
        dynamic update tests of FEConvolveMatrix.

        * platform/graphics/filters/FEConvolveMatrix.cpp:
        (WebCore::FEConvolveMatrix::setDivisor):
        (WebCore::FEConvolveMatrix::setBias):
        (WebCore::FEConvolveMatrix::setTargetOffset):
        (WebCore::FEConvolveMatrix::edgeMode):
        (WebCore::FEConvolveMatrix::setEdgeMode):
        (WebCore::FEConvolveMatrix::setPreserveAlpha):
        * platform/graphics/filters/FEConvolveMatrix.h:
        * svg/SVGFEConvolveMatrixElement.cpp:
        (WebCore::SVGFEConvolveMatrixElement::setFilterEffectAttribute):
        (WebCore::SVGFEConvolveMatrixElement::svgAttributeChanged):
        * svg/SVGFEConvolveMatrixElement.h:


Canonical link: https://commits.webkit.org/69394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79474 268f45cc-cd09-0410-ab3c-d52691b4dbfc